src/card/card.scss
@import "../glow.scss";

@mixin card-glow-shape() {
	width: 81%;
	height: 85%;
	left: 11%;
	top: 9%;
}

.card-spell, .card-minion {
	&.playable {
		&::before {
			@include green-glow-subtle();
			@include card-glow-shape();
		}

		&.focused::before {
			@include green-glow-intense();
			@include card-glow-shape();
		}

		&.combo {
			&::before {
				@include orange-glow-subtle();
				@include card-glow-shape();
			}

			.combo.focused::before {
				@include orange-glow-intense();
				@include card-glow-shape();
			}
		}
	}
}

/**
 * Minion Card
 */

.card-minion {
	position: relative;
	height: 100%;

	&__portrait {
		position: absolute;
		height: 56%;
		left: 14.39%;
		top: 1.33%;
		clip-path: ellipse(37.87% 48.12% at 50.49% 50.49%);
		z-index: -1; // Can this be removed somehow?
	}

	&__frame {
		height: 100%;
	}

	&__overlay {
		position: absolute;
		width: 100%;
		height: 100%;
		left: 0px;
		top: 0px;

		@at-root svg#{& + __mana} {
			@include stat-overlay-item();
			top: 1.5%;
			left: -3.5%;
		}

		@at-root svg#{& + __name} {
			position: absolute;
			width: 100%;
			left: 0;
		}

		&__dragon {
			position: absolute;
			width: 74%;
			left: 25.5%;
			top: -5%;
		}

		&__rarity {
			position: absolute;
			height: 100%;
			width: 100%;

			&__bracket {
				position: absolute;
		        width: 15.25%;
		        height: 3.68%;
		        top: 56.3%;
		        left: 47.7%;
			}

			&__gem {
				position: absolute;
				width: 6.9%;
				top: 56.6%;
				left: 50.6%;
			}
		}

		&__swirl {
			position: absolute;
			height: 19.89%;
			bottom: 10.5%;
			left: 36.5%;
		}

		&__description {
			position: absolute;
			width: 67%;
		    bottom: 11%;
		    left: 18%;
			font-family: "franklinGothic";
			font-size: 20px;

			&__text {
				display: flex;
				align-items: center;
				justify-content: center;
				text-align: center;
				height: 85px;
				width: 95%;
				margin-left: 2.5%;
			}
		}

		@at-root svg#{& + __attack} {
			@include stat-overlay-item();
			bottom: -8.5%;
			left: -3%;
		}

		@at-root svg#{& + __health} {
			@include stat-overlay-item();
			bottom: -9%;
			right: -7.5%;
		}

		&__race {
			position: absolute;
		    width: 100%;
		    height: 20%;
		    bottom: -5%;
		    left: 28%;

			img {
				width: 50%;
			    position: absolute;
			    left: 0;
			}

			svg {
				width: 42%;
			    position: absolute;
			    left: 4%;
			    top: -45%;

				text {
					text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
					text-anchor: middle;
					font-size: 16px;
					font-family: Belwe;
					fill: white;
				}
			}
		}
	}
}

/**
 * Spell Card
 */

.card-spell {
	position: relative;
	height: 100%;

	&__portrait {
		position: absolute;
	    height: 53%;
	    left: 15.39%;
	    top: 4.33%;
	    clip-path: ellipse(75.87% 40.12% at 50.49% 50.49%);
		z-index: -1; // Can this be removed somehow?
	}

	&__frame {
		height: 100%;
	}

	&__overlay {
		position: absolute;
		width: 100%;
		height: 100%;
		left: 0px;
		top: 0px;

		@at-root svg#{& + __mana} {
			@include stat-overlay-item();
			top: 1.5%;
			left: -3.5%;
		}

		@at-root svg#{& + __name} {
			position: absolute;
			width: 100%;
			left: 0;
		}

		&__rarity {
			position: absolute;
			height: 100%;
			width: 100%;

			&__bracket {
				position: absolute;
			    height: 8%;
			    top: 54.7%;
			    left: 41.1%;
			}

			&__gem {
				position: absolute;
			    width: 9%;
			    top: 57%;
			    left: 47.3%;
			}
		}

		&__swirl {
			position: absolute;
			width: 45%;
		    bottom: 10%;
		    left: 29.5%;
		}

		&__description {
			position: absolute;
			width: 67%;
		    bottom: 11%;
		    left: 18%;
			font-family: "franklinGothic";
			font-size: 20px;

			&__text {
				display: flex;
				align-items: center;
				justify-content: center;
				text-align: center;
				height: 92px;
				width: 90%;
				margin-left: 4%;
			}
		}
	}
}

